# altcanvas

./: AltPublishr.md  GimpPublishr.md  InkFace.md  InkscapePublishr.md  MaemoPublishr.md  MiniFoF.md  ProjectHome.md  PublishrChangelog.md  build.sh
altX/: Makefile.am  altX.c  animGdk.c  animX.c  cairo-on-x.py  canvas-test.py  canvasX.c  configure.ac
altX/debian/: changelog  control  files  rules  substvars
altX/src/: Makefile.am  altX.c  animX.c  canvasX.c  plainX.c
altplayer/: altplayer.py  setup.py
altplayer/altplayerlib/: __init__.py  config.py  coverart.py  db.py  id3reader.py  utils.py
altplayer/tests/: coverart.py  db_test.py
altsvg/: __init__.py  draw.py  style.py
altsvg/tests/: basic.py  inkface-viewer.py  pygame-viewer.py  regression.py  viewer.py
common/libpub/: __init__.py  control.py  flickr.py  flickr_local.py  flickrapi.py  gdkpixbuf.py  gui.py  imagic.py  maemo_gui.py  picasa.py
common/libpub/gdata/: __init__.py  service.py
common/libpub/prime/: __init__.py  animation.py  app.py  layer.py  logic.py  mask.py  utils.py  widget.py  widgetq.py
common/libpub/utils/: __init__.py  config.py  crash.py  xmlparser.py
docs/: events.dia  fancyentry.dia
gadgetbook/: app.yaml  gadgetbook.py  schema.py  transformer.py
gimp/publishr/: publishr.py
gimp/publishr/libpub/: __init__.py  flickr.py  gui.py  picasa.py
gimp/publishr/tests/: backend-test.py
inkface/: README  SConstruct  appgen.py  inkface-python.spec  librsvg.patch  runtests.sh  x11-rsvg.c
inkface-pygame/: INSTALL  setup.py
inkface-pygame/inkface/: __init__.py
inkface-pygame/inkface/altsvg/: __init__.py  cairo_debug.py  draw.py  element.py  style.py
inkface-pygame/inkface/canvas/: __init__.py  canvas.py  cluttercanvas.py  pygamecanvas.py
inkface-pygame/tests/: animation.py  basic.py  change.py  clone.py  events.py  hide.py  keyboard.py  magnify.py  regression.sh  textbox.py  twt.py
inkface-pygame/tests/clutter/: basic.py  change.py  clone.py  events.py  hide.py  regression.sh
inkface-pygame/tests/pygame/: animation.py  basic.py  change.py  clone.py  events.py  hide.py  keyboard.py  magnify.py  regression.sh  stanza.py  textbox.py  twt.py  xform.py
inkface/altsvg/: style.py  svn-commit.tmp
inkface/altsvg/tests/: basic.py  inkface-viewer.py  pygame-viewer.py
inkface/apps/clutterdemo/: clutterdemo.py  credits
inkface/apps/notes/: keyboard.py  notes.py
inkface/apps/pathfinder/: pathfinder.py
inkface/apps/twit/: imgloader.py  keyboard.py  login.py  setup.py  twit.py  twitink.desktop
inkface/canvas/: __init__.py
inkface/debian/: SConscript
inkface/inklib/python/: setup.py
inkface/src/: SConscript  inkface-python.c  inkface.c  lib.sc  python.sc  test.py
inkface/src/lib/: canvas-common.h  canvas-gl.c  canvas-gl.h  canvas-x.c  canvas-x.h  common.c  common.h  macro.h
inkface/tests/: SConscript  inkface-anim.py  inkface-basic.py  inkface-facevisual.py  inkface-img.py  inkface-irc.py  inkface-keyboard.py  inkface-mp3player.py  inkface-visual.py  simpymod-test.py  simpymod.c
inkface2/: mkdeb.py  setup.py
inkface2/docs/: Makefile
inkface2/docs/source/: conf.py  index.rst
inkface2/inkface/: __init__.py  canvas.py
inkface2/inkface/altsvg/: __init__.py  draw.py  element.py  path.py  qtdraw.py  qtelement.py  qtstyle.py  style.py
inkface2/inkface/canvas/: canvas.py  ecanvas.py  pygamecanvas.py
inkface2/inkface/clutter/: __init__.py
inkface2/tests/: raster-elem.py
inkplug/: inkplug.inx  inkplug.py
inkscape/publishr/: publishr.inx  publishr.py
install/: alt-setup.py  altpublishr.desktop  bdist_debian.py  publishr.desktop  setup.py
libaltsvg/: Makefile.am  Makefile.in  README.build  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  inkface-demo.py  inkface.c  inkface.h  keyboard.c  libaltsvg.pc.in  libaltsvg.spec  librsvg-2.0.pc.in  librsvg-features.h  librsvg-zip.in  librsvg.def  librsvg.spec  librsvg.spec.in  logic.c  player.c  rsvg-base.c  rsvg-cairo-draw.c  rsvg-cairo-draw.h  rsvg-cairo-render.c  rsvg-defs.c  rsvg-defs.h  rsvg-private.h  rsvg-shapes.c  rsvg-structure.c  rsvg-styles.c  rsvg-styles.h  rsvg-text.c  survey.c  xvtest.c
libaltsvg/data/: Makefile.am  Makefile.in  inkface.desktop
libaltsvg/debian/: changelog  control  control.in  copyright  files  rules  substvars
libaltsvg/doc/: Makefile.in
libaltsvg/doc/html/: index.html  index.sgml  ix01.html  pt02.html  pt03.html  pt04.html  rsvg-Cairo.html  rsvg-Core-API.html  rsvg-GdkPixbuf.html  rsvg.devhelp  rsvg.devhelp2  rsvg.html
libaltsvg/doc/tmpl/: rsvg-cairo.sgml
libaltsvg/doc/xml/: rsvg-cairo.xml  rsvg-file-util.xml  rsvg.xml
libaltsvg/gdk-pixbuf-loader/: Makefile.am  Makefile.in
libaltsvg/gtk-engine/: Makefile.am  Makefile.in
libaltsvg/gtk-engine/examples/: Makefile.in
libaltsvg/gtk-engine/examples/bubble/: Makefile.in
libaltsvg/gtk-engine/examples/bubble/gtk-2.0/: Makefile.in
libaltsvg/moz-plugin/: Makefile.in
libaltsvg/tests/: Makefile.am  Makefile.in
libaltsvg/tests/pdiff/: Makefile.in
maemo/publishr/: publishr-start.py  publishr.py
maemo/publishr-prime/: publishr.py  publishrX.py
minifof/src/: Audio.py  Credits.py  Data.py  DummyAmanith.py  FretsOnFire.py  GameEngine.py  GameResultsScene.py  GameTask.py  Guitar.py  GuitarScene.py  Lobby.py  MainMenu.py  Menu.py  Mesh.py  Song.py  Svg.py  SvgTest.py  Texture.py  Video.py  minifof.py
publishr-server/: app.yaml  flickr.py  flickrinterface.py  publishr-server.py  xmlrpcserver.py
repoengine/: app.yaml  debrepo.py
scratch/: evasapp.py  qtapp.py
scripts/: bot  chkgmail  rawread
stackless/: autogen.sh  maemo-sb.patch
stackless/debian/: files
tests/: cairo-test.py  coverart.py  coverart_tests.py  gst-player.py  inheritance-test.py  scratchpad.py  svgparser.py  sync-n810.sh  thread-test.py
tests/inkfun/: Makefile  boiler.h  inkfun.c
tests/libpub/: backend.py  imagic-test.py  picasa-service-test.py  picasa-test.py
tests/stackless/: gui.py
utils/: libsize.sh  valgrind.sh
utils/s3backup/: AmazonS3.py  Archiver.py  S3.py  archive.sh  deploy.sh  s3backup.sh
(+145 files in other folders)
