pixmapdir = $(datadir)/pixmaps
#pixmap_DATA = svg-viewer.svg keyboard-formal.svg keyboard-playfull.svg keyboard-elegant.svg music-player-auditorium.svg music-player-sunset.svg autumn.png sunset.png dido.png jem.png corrs.png
pixmap_DATA = survey.svg

desktopentrydir = $(datadir)/applications/hildon
desktopentry_DATA = inkface.desktop

EXTRA_DIST = \
	$(pixmap_DATA) $(desktopentry_DATA)
	
